<resources>
    <string name="app_name">Contact Manager</string>

    <string name="photo">Photo</string>
    <string name="contact_info">Contact info</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="mail">Mail</string>

    <string name="delete">Delete</string>

    <string name="save">Save</string>

    <string name="reset">Reset</string>

    <string name="invalid_email">Invalid Email</string>
    <string name="contact_editing">Contact editing</string>

</resources>